--- a/pinyougou-mapper/src/main/resources/props/db.properties
+++ b/pinyougou-mapper/src/main/resources/props/db.properties
@@ -4,3 +4,8 @@ jdbc.username=root
 jdbc.password=root
 jdbc.maxActive=10
 jdbc.minIdle=5
+
+# mycat
+#jdbc.url=jdbc:mysql://192.168.12.132:8066/pinyougou?characterEncoding=utf-8
+#jdbc.username=root
+#jdbc.password=123456
