--- a/pinyougou-service/pinyougou-pay-service/src/main/resources/props/weixinpay.properties
+++ b/pinyougou-service/pinyougou-pay-service/src/main/resources/props/weixinpay.properties
@@ -9,3 +9,5 @@ partnerkey=T6m9iK73b0kn9g5v426MKfHQH7X8rKwb
 unifiedorder=https://api.mch.weixin.qq.com/pay/unifiedorder
 # 定义查询订单接口
 orderquery=https://api.mch.weixin.qq.com/pay/orderquery
+# 定义关闭订单接口
+closeorder=https://api.mch.weixin.qq.com/pay/closeorder
